--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <title> Rayan Elsegahy</title>
    <link rel="stylesheet" href="style.css" />
-   <met charset="utf-8" />
+   <meta charset="utf-8" />
 </head>
 <body>
    <h1> Rayan Elsegahy Présentation </h1>
